# OpenPCDet

./: pyproject.toml  requirements.txt  setup.py
pcdet/datasets/pandaset/: pandaset_dataset.py
pcdet/models/backbones_3d/: dsvt.py
tools/: train.py
